k8/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quote-ingress
  namespace: quote-k8-java
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quote-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: quote-api-service
                port:
                  number: 80
